Text overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+
+  overflow-wrap: break-word;
 }
 
 *::selection {
